[package]
name = "macros-rs"
version = "1.1.1"
edition = "2021"
license = "MIT"
description = "fluffy, simple & useful macros"
repository = "https://git.furry.win/crates/macros"

[dependencies]
termcolor = "1"
actix-web = { version="4", optional = true }

[features]
actix-web = ["dep:actix-web"]

[dev-dependencies]
actix-web = "4.5.1"
actix-http = "3.6.0"
actix-utils = "3.0.1"
actix-http-test = "3.2.0"

